sumo/tests/duarouter/routes/style2_input/errors/vehicle_empty_departlane/errors.duarouter
Error: Attribute 'departLane' in definition of a vehicle is empty.
Error: Invalid departLane definition for vehicle '0'
Quitting (on error).
